--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Cunnix</title>
+    <meta property="og:title" content="Cunnix">
+    <meta property="og:description" content="UNIX cunny">
+    <meta property="og:url" content="https://cunnix.tech">
 
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <style>
