--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html class="h-100" lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 
     <title>Cunnix</title>
-    <meta property="og:title" content="Cunnix">
-    <meta property="og:description" content="UNIX cunny">
-    <meta property="og:url" content="https://cunnix.tech">
+    <meta property="og:title" content="Cunnix" />
+    <meta property="og:site_name" content="UNIX cunny" />
+    <meta property="og:description" content="uoh" />
+    <meta property="og:image" content="" />
+    <meta name="theme-color" content="#55bbee" />
+    <meta name="twitter:card" content="summary_large_image" />
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <style>
         /* Custom default button */
         .btn-secondary,
@@ -75,7 +79,7 @@
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p>by <a href="https://github.com/yvvki" class="text-white">yvvki</a>.</p>
+            <p>Website by <a href="https://github.com/yvvki" class="text-white">yvvki</a>.</p>
         </footer>
 
     </div>
