--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="shortcut icon" href="img/nazrin.png" type="image/png">
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <style>
         /* Custom default button */
@@ -75,11 +76,13 @@
 
         <main class="px-3">
             <h1>UNIX cunny</h1>
+            <img src="img/nazrin.png" alt="Nazrin eating rat poison" class="py-2" />
             <p class="lead">uoh</p>
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p>Website by <a href="https://github.com/yvvki" class="text-white">yvvki</a>.</p>
+            <p>Website by <a href="https://github.com/yvvki" class="text-white">yvvki</a>
+                <br />Art by <a href="https://bigstinko.newgrounds.com" class="text-white">BigStinko</a></p>
         </footer>
 
     </div>
