--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Cunnix" />
     <meta property="og:site_name" content="UNIX cunny" />
     <meta property="og:description" content="uoh" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="/img/nazrin.png" />
     <meta name="theme-color" content="#55bbee" />
     <meta name="twitter:card" content="summary_large_image" />
 
@@ -76,7 +76,7 @@
 
         <main class="px-3">
             <h1>UNIX cunny</h1>
-            <img src="img/nazrin.png" alt="Nazrin eating rat poison" class="py-2" />
+            <img src="/img/nazrin.png" alt="Nazrin eating rat poison" class="py-2" />
             <p class="lead">uoh</p>
         </main>
 
