Flip `og:site_name` and `og:title`

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 
     <title>Cunnix</title>
-    <meta property="og:title" content="Cunnix" />
-    <meta property="og:site_name" content="UNIX cunny" />
+    <meta property="og:site_name" content="Cunnix" />
+    <meta property="og:title" content="UNIX cunny" />
     <meta property="og:description" content="uoh" />
     <meta property="og:image" content="/img/nazrin.png" />
     <meta name="theme-color" content="#55bbee" />
